--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-height: max-content;
 }
 
 div#box {
@@ -28,8 +29,14 @@ img {
     margin: 5px;
     filter: brightness(150%);
     object-fit: cover;
+    transition: all 1s linear;
 }
-
+img:hover{
+  scale: 1.5;
+  border-radius: 10%;
+  box-shadow: 5px 5px 5px 5px;
+  z-index: 6;
+}
 .button {
     font-size: 17px;
     border-radius: 12px;
