--- a/style.css
+++ b/style.css
@@ -1,84 +1,58 @@
 * {
-    padding: 0%;
-    margin: 0px;
-    box-sizing: border-box;
-    background-color: lightslategrey;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  padding: 0%;
+  margin: 0px;
+  box-sizing: border-box;
+  background-color: lightslategrey;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    max-height: max-content;
+  max-height: max-content;
+}
+
+div#container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 div#box {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 img {
-    width: 300px;
-    height: 30vh;
-    margin: 5px;
-    filter: brightness(150%);
-    object-fit: cover;
-    transition: all 1s linear;
+  width: 200px;
+  height: 30vh;
+  margin: 5px;
+  filter: brightness(150%);
+  object-fit: cover;
+  transition: all 1s linear;
+  z-index: 1;
 }
-img:hover{
-  scale: 1.5;
+
+/* img:hover{
+  transform: scale(1.3);
   border-radius: 10%;
   box-shadow: 5px 5px 5px 5px;
-  z-index: 6;
-}
+  z-index: 5;
+} */
 .button {
-    font-size: 17px;
-    border-radius: 12px;
-    background: linear-gradient(180deg, rgb(56, 56, 56) 0%, rgb(36, 36, 36) 66%, rgb(41, 41, 41) 100%);
-    color: rgb(218, 218, 218);
-    border: none;
-    padding: 2px;
-    font-weight: 700;
-    cursor: pointer;
-    position: relative;
-    overflow: hidden;
-  }
-  
-  .button span {
-    border-radius: 10px;
-    padding: 0.8em 1.3em;
-    padding-right: 1.2em;
-    text-shadow: 0px 0px 20px #4b4b4b;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    gap: 12px;
-    color: inherit;
-    transition: all 0.3s;
-    background-color: rgb(29, 29, 29);
-    background-image: radial-gradient(at 95% 89%, rgb(15, 15, 15) 0px, transparent 50%), radial-gradient(at 0% 100%, rgb(17, 17, 17) 0px, transparent 50%), radial-gradient(at 0% 0%, rgb(29, 29, 29) 0px, transparent 50%);
-  }
-  
-  .button:hover span {
-    background-color: rgb(26, 25, 25);
-  }
-  
-  .button-overlay {
-    position: absolute;
-    inset: 0;
-    pointer-events: none;
-    background: repeating-conic-gradient(rgb(48, 47, 47) 0.0000001%, rgb(51, 51, 51) 0.000104%) 60% 60%/600% 600%;
-    filter: opacity(10%) contrast(105%);
-    -webkit-filter: opacity(10%) contrast(105%);
-  }
-  
-  .button svg {
-    width: 15px;
-    height: 15px;
-  }
+  width: 100px;
+  font-size: 17px;
+  border-radius: 12px;
+  background: linear-gradient(180deg, rgb(56, 56, 56) 0%, rgb(36, 36, 36) 66%, rgb(41, 41, 41) 100%);
+  color: rgb(218, 218, 218);
+  border: none;
+  padding: 2px;
+  font-weight: 700;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+}
